# Skelator

./: README.md  create_negation_environments.sh  create_report.py  lcm  setup.cfg  setup.py
src/skelator/: also_main.py  main.py  negations.py  test.py
src/skelator/assets/: Dockerfile  Makefile  coverage.yml  direct_lcm.c  dynamic_fibonacci.c  gcd.c  lcm.c  lcm_with_gcd.c  main.c  nth_prime.c  recursive_fibonacci.c  repair.yml  space_optimized_fibonacci.c  valid_triangle.c  zune.c
src/skelator/suites/: __init__.py  fibonacci.py  gcd.py  lcm.py  prime.py  triangle.py  zune.py
