[metadata]
name = skelator
author = Tyler Westland
author-email = tylerofthewest@gmail.com
url = ?????????????????????
description = Creates the skeleton structure for a Darjeeling experiment with negated test cases
long-description = file: README.md, LICENSE
license = GNU General Public License, Version 3.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
python_requires = >= 3.6
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

